--- a/src/config.h.in
+++ b/src/config.h.in
@@ -62,3 +62,19 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
+
+#define __in
+#define __out
+#define __in_opt
+#define __inout
+#define __in_bcount(x)
+#define __in_ecount(x)
+#define __out_ecount(x)
+#define __out_bcount(x)
+#define __out_ecount_part_opt(x,y)
+#define __out_bcount_opt(x)
+#define __in_bcount_opt(x)
+#define __in_ecount_opt(x)
+#define __out_ecount_opt(x)
+#define __out_opt
+#define __inout_opt
