--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,28 @@ if(tools:::.OStype() == "windows") {
 export(odbcConnectAccess, odbcConnectAccess2007, odbcConnectDbase,
        odbcConnectExcel, odbcConnectExcel2007)
 }
+export(ODBC)
+exportClasses(ODBCConnection)
+exportClasses(ODBCDriver)
+exportClasses(ODBCResult)
+exportMethods(dbClearResult)
+exportMethods(dbColumnInfo)
+exportMethods(dbConnect)
+exportMethods(dbDisconnect)
+exportMethods(dbExistsTable)
+exportMethods(dbFetch)
+exportMethods(dbGetInfo)
+exportMethods(dbGetRowCount)
+exportMethods(dbGetStatement)
+exportMethods(dbHasCompleted)
+exportMethods(dbIsValid)
+exportMethods(dbListFields)
+exportMethods(dbListTables)
+exportMethods(dbReadTable)
+exportMethods(dbRemoveTable)
+exportMethods(dbSendQuery)
+exportMethods(dbUnloadDriver)
+exportMethods(dbWriteTable)
+import(DBI)
+import(methods)
+
