--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ exportClasses(ODBCDriver)
 exportClasses(ODBCResult)
 exportMethods(dbClearResult)
 exportMethods(dbColumnInfo)
+exportMethods(dbGetRowsAffected)
 exportMethods(dbConnect)
 exportMethods(dbDisconnect)
 exportMethods(dbExistsTable)
